<resources>
    <string name="app_name">YourFinance</string>
    <string name="title_transactions">Транзакции</string>
    <string name="title_shopping_list">Календарь</string>
    <string name="title_statistic">Статистика</string>
    <string name="title_wallet">Кошелёк</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Доход</string>
    <string name="expense">Расход</string>
    <string name="save_changes">Сохранить</string>
    <string name="create_account">Создать</string>
    <string name="edit_account_title">Редактировать счёт</string>
    <string name="add_account_title">Добавить счёт</string>
    <string name="edit_category_title">Редактировать категорию</string>
    <string name="add_category_title">Добавить категорию</string>
    <string name="add_subcategory_title">Добавить подкатегорию</string>
    <string name="edit_subcategory_title">Редактировать подкатегорию</string>
    <string name="cancel">Отмена</string>
    <string name="no_accounts_available">Нет доступных счетов</string>
    <string name="period_not_selected">Дата не выбрана</string>
    <string name="period_week_not_selected">Неделя не выбрана</string>
    <string name="period_month_not_selected">Месяц не выбран</string>
    <string name="period_quarter_not_selected">Квартал не выбран</string>
    <string name="period_year_not_selected">Год не выбран</string>
    <string name="period_all_time">Все время</string>
    <string name="period_range_not_selected">Диапазон не выбран</string>
    <string name="delete">Удалить</string>
    <string name="transaction_deleted_toast">Транзакция удалена</string>


    <string name="category_type_expense">Расход</string>
    <string name="category_type_income">Доход</string>

    <!-- CategoryCreateEdit -->
    <string name="category_group_entertainment">Развлечения</string>
    <string name="category_group_food">Еда</string>
    <string name="error_category_name_empty">Название не может быть пустым</string>
    <string name="error_select_icon_for_category">Пожалуйста, выберите иконку для категории</string>
    <string name="error_category_not_found">Категория не найдена</string>
    <string name="error_failed_to_update_category">Ошибка: Не удалось обновить категорию</string>

    <string name="default_icon_group_name">Иконки</string>
    <string name="ic_placeholder_category_description">Иконка-заглушка для категории</string>
    <string name="error_name_empty">Название пусто\n</string>
    <string name="error_negative_amount">Сумма не может быть отрицательной</string>
    <string name="error_invalid_amount_format">Неверный формат суммы</string>
    <string name="placeholder_account_from">Счёт списания</string>
    <string name="placeholder_account_to">Счёт зачисления</string>
    <string name="settings_text">Настройки</string>
    <string name="error_nav_category_settings">Возникла ошибка при открытии менеджера категорий</string>
    <string name="error_nav_account_settings">Возникла ошибка рпи открытии менеджера счетов</string>
    <string name="tab_expense">Расход</string>
    <string name="tab_income">Доход</string>
    <string name="tab_remittance">Перевод</string>
    <string name="title_edit_transaction">Редактировать транзакцию</string>
    <string name="title_add_transaction">Создать транзакцию</string>
    <string name="subcategories_count_format">Подкатегорий: %1$d</string>
    <string name="expenses_tab_label">Расход</string>
    <string name="incomes_tab_label">Доход</string>
    <string name="end_balance_label">Конечный баланс</string>
    <string name="start_balance_label">Начальный баланс</string>
    <string name="no_data_for_display">Нет данных для отображения</string>
    <string name="chart_title_expenses">Структура Расходов</string>
    <string name="chart_title_incomes">Структура Доходов</string>
</resources>