<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions_24dp"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_shopping_list"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_shopping_list" />

    <item
        android:id="@+id/navigation_empty"
        android:title="" />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_statistic"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet_24dp"
        android:title="@string/title_wallet" />

</menu>