<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".ui.fragment.StatisticFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- ... (Верхняя часть макета без изменений) ... -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/period_navigation_bar_statistic"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#212323">
            <ImageButton
                android:id="@+id/button_previous_period_statistic"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_arrow_left_24"
                android:background="?attr/selectableItemBackground"
                app:tint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/text_current_period_statistic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_next_period_statistic"
                app:layout_constraintStart_toEndOf="@+id/button_previous_period_statistic"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="11-17 мая 2025 г." />
            <ImageButton
                android:id="@+id/button_next_period_statistic"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_arrow_right_24"
                android:background="?attr/selectableItemBackground"
                app:tint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/balances_card_statistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="#2C2C2E">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="@color/grey_100"
                        android:text="@string/start_balance_label" />
                    <TextView
                        android:id="@+id/tvStartBalanceStatistic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        tools:text="10 000 ₽" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/end_balance_label"
                        android:textColor="@color/grey_100"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/tvEndBalanceStatistic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        tools:text="17 332 ₽" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/income_expense_sum_section_statistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#212323"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_center_statistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
            <androidx.cardview.widget.CardView
                android:id="@+id/card_income_statistic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_center_statistic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:cardCornerRadius="16dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_back"
                    android:padding="12dp">
                    <ImageView
                        android:id="@+id/icon_income_statistic"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_up_arrow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                        android:id="@+id/label_income_statistic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toEndOf="@id/icon_income_statistic"
                        app:layout_constraintTop_toTopOf="@id/icon_income_statistic"
                        app:layout_constraintBottom_toTopOf="@id/income_balance_statistic"/>
                    <TextView
                        android:id="@+id/income_balance_statistic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="18 500,00 ₽"
                        android:textColor="#BDBDBD"
                        android:textSize="13sp"
                        android:layout_marginTop="2dp"
                        app:layout_constraintStart_toStartOf="@id/label_income_statistic"
                        app:layout_constraintTop_toBottomOf="@id/label_income_statistic"
                        app:layout_constraintBottom_toBottomOf="@id/icon_income_statistic"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_expense_statistic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideline_center_statistic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:cardCornerRadius="16dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_back"
                    android:padding="12dp">
                    <ImageView
                        android:id="@+id/icon_expense_statistic"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_down_arrow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                        android:id="@+id/label_expense_statistic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toEndOf="@id/icon_expense_statistic"
                        app:layout_constraintTop_toTopOf="@id/icon_expense_statistic"
                        app:layout_constraintBottom_toTopOf="@id/expense_balance_statistic"/>
                    <TextView
                        android:id="@+id/expense_balance_statistic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0,00 ₽"
                        android:textColor="#BDBDBD"
                        android:textSize="13sp"
                        android:layout_marginTop="2dp"
                        app:layout_constraintStart_toStartOf="@id/label_expense_statistic"
                        app:layout_constraintTop_toBottomOf="@id/label_expense_statistic"
                        app:layout_constraintBottom_toBottomOf="@id/icon_expense_statistic"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutStatistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:tabMode="fixed"
            app:tabGravity="fill"
            android:background="?android:attr/colorBackground"
            app:tabTextColor="?android:attr/textColorSecondary"
            app:tabSelectedTextColor="?attr/colorPrimary"
            app:tabIndicatorColor="?attr/colorPrimary">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenses_tab_label" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomes_tab_label" />
        </com.google.android.material.tabs.TabLayout>

        <TextView
            android:id="@+id/tvChartTitleStatistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="Структура Расходов"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chart_and_legend_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChartStatistic"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_chart_legend"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.55" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_vertical_chart_legend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.55"/>

                <ScrollView
                    android:id="@+id/legend_scroll_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:scrollbars="none"
                    android:fillViewport="true"
                    app:layout_constraintTop_toTopOf="@id/pieChartStatistic"
                    app:layout_constraintStart_toEndOf="@id/guideline_vertical_chart_legend"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/pieChartStatistic"
                    app:layout_constraintHeight_default="wrap"
                    app:layout_constrainedHeight="true">

                    <LinearLayout
                        android:id="@+id/legend_container_statistic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>
                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_no_data_message_statistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:text="@string/no_data_for_display"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?android:attr/textColorSecondary"
                android:visibility="gone"
                tools:visibility="visible"/>
        </FrameLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>